--- a/strojnoucenje.ipynb
+++ b/strojnoucenje.ipynb
@@ -1,19 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 114,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "\n",
+    "**U ovom projektu korišten je skup podataka koji sadrži informacije o korisnicima telekomunikacijske kompanije i govori nam je li određeni korisnik otkazao uslugu ili ne.\n",
+    "Na temelju tih podataka gradi se neuronska mreža koja uči i predviđa hoće li korisnik napustiti uslugu kompanije ili ostati.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +225,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +295,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,15 +317,11 @@
     "from sklearn.impute import SimpleImputer\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "import torch\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
-    "# Assuming telco_df is already loaded and cleaned\n",
     "\n",
-    "# Drop target column and define features and target\n",
+    "\n",
     "X = telco_df.drop([\"Churn\"], axis=1)\n",
     "y = telco_df[\"Churn\"]\n",
     "\n",
@@ -330,26 +333,26 @@
     "\n",
     "numerical_columns = [\"SeniorCitizen\", \"tenure\", \"MonthlyCharges\", \"TotalCharges\"]\n",
     "\n",
-    "# Check and clean the data\n",
+    "\n",
     "for col in numerical_columns:\n",
     "    X[col] = pd.to_numeric(X[col].replace(' ', np.nan), errors='coerce')  # Convert to float\n",
     "\n",
-    "# Impute missing values in numerical columns\n",
+    "\n",
     "imputer = SimpleImputer(strategy='median')\n",
     "X[numerical_columns] = imputer.fit_transform(X[numerical_columns])\n",
     "\n",
-    "# Convert categorical columns to string\n",
+    "\n",
     "X[categorical_columns] = X[categorical_columns].astype(str)\n",
     "\n",
-    "# Convert 'Churn' to numerical values\n",
+    "\n",
     "label_encoder = LabelEncoder()\n",
     "y = label_encoder.fit_transform(y)\n",
     "\n",
-    "# Create transformers for each type of data\n",
-    "one_hot = OneHotEncoder(sparse_output=False, drop='first')  # Updated argument\n",
-    "scaler = StandardScaler()  # Standardize numerical features\n",
     "\n",
-    "# Combine transformers into a column transformer\n",
+    "one_hot = OneHotEncoder(sparse_output=False, drop='first')  \n",
+    "scaler = StandardScaler()  \n",
+    "\n",
+    "\n",
     "transformer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"one_hot\", one_hot, categorical_columns),\n",
@@ -358,32 +361,27 @@
     "    remainder=\"passthrough\"\n",
     ")\n",
     "\n",
-    "# Fit and transform the data\n",
+    "\n",
     "transformed_X = transformer.fit_transform(X)\n",
     "\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(transformed_X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Scale the features\n",
+    "X_train, X_test, y_train, y_test = train_test_split(transformed_X, y, test_size=0.3)\n",
+    "\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Convert to PyTorch tensors\n",
+    "\n",
     "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).unsqueeze(1)\n",
     "X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
-    "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).unsqueeze(1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).unsqueeze(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,11 +396,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gradnja neuronke mreže\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
@@ -423,123 +420,122 @@
     "input_dim = X_train.shape[1]\n",
     "model = BinaryClassificationModel(input_dim)\n",
     "criterion = nn.BCELoss()  \n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100, Loss: 0.48463434772302877\n",
-      "Epoch 2/100, Loss: 0.4272565748226845\n",
-      "Epoch 3/100, Loss: 0.42395994041935875\n",
-      "Epoch 4/100, Loss: 0.4187567401572136\n",
-      "Epoch 5/100, Loss: 0.4128844477867676\n",
-      "Epoch 6/100, Loss: 0.40921468670758826\n",
-      "Epoch 7/100, Loss: 0.40720313273917486\n",
-      "Epoch 8/100, Loss: 0.4086667971085694\n",
-      "Epoch 9/100, Loss: 0.40472626349346785\n",
-      "Epoch 10/100, Loss: 0.40476478804639504\n",
-      "Epoch 11/100, Loss: 0.39938767540589565\n",
-      "Epoch 12/100, Loss: 0.3988572670578283\n",
-      "Epoch 13/100, Loss: 0.39271596332980413\n",
-      "Epoch 14/100, Loss: 0.39239965673893856\n",
-      "Epoch 15/100, Loss: 0.39523216879973977\n",
-      "Epoch 16/100, Loss: 0.39319521230829635\n",
-      "Epoch 17/100, Loss: 0.3852895996664877\n",
-      "Epoch 18/100, Loss: 0.38325980431952716\n",
-      "Epoch 19/100, Loss: 0.3804897847190752\n",
-      "Epoch 20/100, Loss: 0.3878542176410977\n",
-      "Epoch 21/100, Loss: 0.38105827906710954\n",
-      "Epoch 22/100, Loss: 0.37776014932804863\n",
-      "Epoch 23/100, Loss: 0.37289776902456406\n",
-      "Epoch 24/100, Loss: 0.3725716006957879\n",
-      "Epoch 25/100, Loss: 0.3689650553094465\n",
-      "Epoch 26/100, Loss: 0.36728966918032047\n",
-      "Epoch 27/100, Loss: 0.36419850951955146\n",
-      "Epoch 28/100, Loss: 0.3621538442238576\n",
-      "Epoch 29/100, Loss: 0.3606105401354321\n",
-      "Epoch 30/100, Loss: 0.3571553436965592\n",
-      "Epoch 31/100, Loss: 0.35593179070343406\n",
-      "Epoch 32/100, Loss: 0.3545283757697391\n",
-      "Epoch 33/100, Loss: 0.3511479441839465\n",
-      "Epoch 34/100, Loss: 0.3469120236271519\n",
-      "Epoch 35/100, Loss: 0.3492356095105241\n",
-      "Epoch 36/100, Loss: 0.3470781150847505\n",
-      "Epoch 37/100, Loss: 0.34641039880823954\n",
-      "Epoch 38/100, Loss: 0.3417611154122541\n",
-      "Epoch 39/100, Loss: 0.3372942365042992\n",
-      "Epoch 40/100, Loss: 0.33589832366859845\n",
-      "Epoch 41/100, Loss: 0.3340826564084339\n",
-      "Epoch 42/100, Loss: 0.3321101568681372\n",
-      "Epoch 43/100, Loss: 0.3293910053911182\n",
-      "Epoch 44/100, Loss: 0.329491877370635\n",
-      "Epoch 45/100, Loss: 0.32646637646176213\n",
-      "Epoch 46/100, Loss: 0.32320695909234765\n",
-      "Epoch 47/100, Loss: 0.3205222312760892\n",
-      "Epoch 48/100, Loss: 0.31817195580293567\n",
-      "Epoch 49/100, Loss: 0.3196491221081739\n",
-      "Epoch 50/100, Loss: 0.31829553930941273\n",
-      "Epoch 51/100, Loss: 0.31324074938261914\n",
-      "Epoch 52/100, Loss: 0.31435402575354116\n",
-      "Epoch 53/100, Loss: 0.30923773929224174\n",
-      "Epoch 54/100, Loss: 0.30556461353928355\n",
-      "Epoch 55/100, Loss: 0.3066453958551089\n",
-      "Epoch 56/100, Loss: 0.3102643738190333\n",
-      "Epoch 57/100, Loss: 0.3020669323744747\n",
-      "Epoch 58/100, Loss: 0.2987305029469021\n",
-      "Epoch 59/100, Loss: 0.3005478443567362\n",
-      "Epoch 60/100, Loss: 0.2990584401255947\n",
-      "Epoch 61/100, Loss: 0.2950029080617899\n",
-      "Epoch 62/100, Loss: 0.29444073729932646\n",
-      "Epoch 63/100, Loss: 0.2910685961024236\n",
-      "Epoch 64/100, Loss: 0.2874392658724623\n",
-      "Epoch 65/100, Loss: 0.2881000539929853\n",
-      "Epoch 66/100, Loss: 0.28756387464407474\n",
-      "Epoch 67/100, Loss: 0.2849366079784382\n",
-      "Epoch 68/100, Loss: 0.28377649747887573\n",
-      "Epoch 69/100, Loss: 0.2782929807475184\n",
-      "Epoch 70/100, Loss: 0.27724655023065664\n",
-      "Epoch 71/100, Loss: 0.2769916113992195\n",
-      "Epoch 72/100, Loss: 0.27321548826234826\n",
-      "Epoch 73/100, Loss: 0.27036971560979295\n",
-      "Epoch 74/100, Loss: 0.27577224142302226\n",
-      "Epoch 75/100, Loss: 0.2772782822113253\n",
-      "Epoch 76/100, Loss: 0.26820268532482244\n",
-      "Epoch 77/100, Loss: 0.2709466728176606\n",
-      "Epoch 78/100, Loss: 0.2672307499300289\n",
-      "Epoch 79/100, Loss: 0.2732128082527279\n",
-      "Epoch 80/100, Loss: 0.2694726439013993\n",
-      "Epoch 81/100, Loss: 0.2628037499758483\n",
-      "Epoch 82/100, Loss: 0.2573467579770223\n",
-      "Epoch 83/100, Loss: 0.2596578652744239\n",
-      "Epoch 84/100, Loss: 0.26333395715823954\n",
-      "Epoch 85/100, Loss: 0.26163401534665104\n",
-      "Epoch 86/100, Loss: 0.25388610182003785\n",
-      "Epoch 87/100, Loss: 0.2535978168838442\n",
-      "Epoch 88/100, Loss: 0.25193071836805614\n",
-      "Epoch 89/100, Loss: 0.24970429205456696\n",
-      "Epoch 90/100, Loss: 0.25439400129062306\n",
-      "Epoch 91/100, Loss: 0.24302557266533037\n",
-      "Epoch 92/100, Loss: 0.24294735725750716\n",
-      "Epoch 93/100, Loss: 0.24257727053626782\n",
-      "Epoch 94/100, Loss: 0.24035054630478897\n",
-      "Epoch 95/100, Loss: 0.24041763503672714\n",
-      "Epoch 96/100, Loss: 0.24186615578535586\n",
-      "Epoch 97/100, Loss: 0.24638343286716333\n",
-      "Epoch 98/100, Loss: 0.2513289865379953\n",
-      "Epoch 99/100, Loss: 0.24628045249961864\n",
-      "Epoch 100/100, Loss: 0.23307752671645293\n"
+      "Epoch 1/100, Loss: 0.6317799945031443\n",
+      "Epoch 2/100, Loss: 0.5471324688003909\n",
+      "Epoch 3/100, Loss: 0.4952416616101419\n",
+      "Epoch 4/100, Loss: 0.4654605540537065\n",
+      "Epoch 5/100, Loss: 0.4486959882320896\n",
+      "Epoch 6/100, Loss: 0.44221213296536477\n",
+      "Epoch 7/100, Loss: 0.43580029135750187\n",
+      "Epoch 8/100, Loss: 0.4328250346645232\n",
+      "Epoch 9/100, Loss: 0.43195020258426664\n",
+      "Epoch 10/100, Loss: 0.4328591687064017\n",
+      "Epoch 11/100, Loss: 0.42781182815951685\n",
+      "Epoch 12/100, Loss: 0.42716888295065975\n",
+      "Epoch 13/100, Loss: 0.4221474139921127\n",
+      "Epoch 14/100, Loss: 0.421864662728002\n",
+      "Epoch 15/100, Loss: 0.4236693222676554\n",
+      "Epoch 16/100, Loss: 0.42703449005080807\n",
+      "Epoch 17/100, Loss: 0.4188875680008242\n",
+      "Epoch 18/100, Loss: 0.4173837362758575\n",
+      "Epoch 19/100, Loss: 0.41640840648643435\n",
+      "Epoch 20/100, Loss: 0.41582818752334966\n",
+      "Epoch 21/100, Loss: 0.41656918179604313\n",
+      "Epoch 22/100, Loss: 0.41419277816049516\n",
+      "Epoch 23/100, Loss: 0.4177462695106383\n",
+      "Epoch 24/100, Loss: 0.41303383063885474\n",
+      "Epoch 25/100, Loss: 0.413126683523578\n",
+      "Epoch 26/100, Loss: 0.4116658295835218\n",
+      "Epoch 27/100, Loss: 0.4114203541509567\n",
+      "Epoch 28/100, Loss: 0.41263792514801023\n",
+      "Epoch 29/100, Loss: 0.4109617612054271\n",
+      "Epoch 30/100, Loss: 0.4125924793943282\n",
+      "Epoch 31/100, Loss: 0.4093556286827211\n",
+      "Epoch 32/100, Loss: 0.409866581232317\n",
+      "Epoch 33/100, Loss: 0.41194338327453983\n",
+      "Epoch 34/100, Loss: 0.4081327075919797\n",
+      "Epoch 35/100, Loss: 0.4091527243775706\n",
+      "Epoch 36/100, Loss: 0.4070424163533795\n",
+      "Epoch 37/100, Loss: 0.40672390653241064\n",
+      "Epoch 38/100, Loss: 0.4065699221626405\n",
+      "Epoch 39/100, Loss: 0.4071065305702148\n",
+      "Epoch 40/100, Loss: 0.40872038391328624\n",
+      "Epoch 41/100, Loss: 0.4069263980273278\n",
+      "Epoch 42/100, Loss: 0.4076864478088194\n",
+      "Epoch 43/100, Loss: 0.40430172412626203\n",
+      "Epoch 44/100, Loss: 0.4071689150987133\n",
+      "Epoch 45/100, Loss: 0.40719460825766285\n",
+      "Epoch 46/100, Loss: 0.4030535866656611\n",
+      "Epoch 47/100, Loss: 0.40217892834616287\n",
+      "Epoch 48/100, Loss: 0.403432443065028\n",
+      "Epoch 49/100, Loss: 0.40346487741316517\n",
+      "Epoch 50/100, Loss: 0.4070673906034039\n",
+      "Epoch 51/100, Loss: 0.4070041121975068\n",
+      "Epoch 52/100, Loss: 0.4025887913280918\n",
+      "Epoch 53/100, Loss: 0.4011835542417342\n",
+      "Epoch 54/100, Loss: 0.40057490593002687\n",
+      "Epoch 55/100, Loss: 0.40064907968044283\n",
+      "Epoch 56/100, Loss: 0.4001422513877192\n",
+      "Epoch 57/100, Loss: 0.39976475700255365\n",
+      "Epoch 58/100, Loss: 0.398822574089131\n",
+      "Epoch 59/100, Loss: 0.39851772441498695\n",
+      "Epoch 60/100, Loss: 0.3999312726720687\n",
+      "Epoch 61/100, Loss: 0.40286288780550805\n",
+      "Epoch 62/100, Loss: 0.4077789458536333\n",
+      "Epoch 63/100, Loss: 0.40311477145841046\n",
+      "Epoch 64/100, Loss: 0.39932169789268124\n",
+      "Epoch 65/100, Loss: 0.39736006615623354\n",
+      "Epoch 66/100, Loss: 0.3996529572433041\n",
+      "Epoch 67/100, Loss: 0.39655060941173187\n",
+      "Epoch 68/100, Loss: 0.3969041997386563\n",
+      "Epoch 69/100, Loss: 0.3979590165999628\n",
+      "Epoch 70/100, Loss: 0.40153458676030557\n",
+      "Epoch 71/100, Loss: 0.3975529379421665\n",
+      "Epoch 72/100, Loss: 0.39812760449224904\n",
+      "Epoch 73/100, Loss: 0.3986562413554038\n",
+      "Epoch 74/100, Loss: 0.3977550348927898\n",
+      "Epoch 75/100, Loss: 0.39512177282764066\n",
+      "Epoch 76/100, Loss: 0.39738044065813866\n",
+      "Epoch 77/100, Loss: 0.3966212941754249\n",
+      "Epoch 78/100, Loss: 0.3950012662718373\n",
+      "Epoch 79/100, Loss: 0.3952613830566406\n",
+      "Epoch 80/100, Loss: 0.39505978726571606\n",
+      "Epoch 81/100, Loss: 0.39523241193063796\n",
+      "Epoch 82/100, Loss: 0.3953668155977803\n",
+      "Epoch 83/100, Loss: 0.3917661991330885\n",
+      "Epoch 84/100, Loss: 0.393762495536958\n",
+      "Epoch 85/100, Loss: 0.393416963181188\n",
+      "Epoch 86/100, Loss: 0.3912970922166301\n",
+      "Epoch 87/100, Loss: 0.39404058168011324\n",
+      "Epoch 88/100, Loss: 0.3920576539731795\n",
+      "Epoch 89/100, Loss: 0.3925537191091045\n",
+      "Epoch 90/100, Loss: 0.39061260723298596\n",
+      "Epoch 91/100, Loss: 0.3906443194035561\n",
+      "Epoch 92/100, Loss: 0.39555320816655315\n",
+      "Epoch 93/100, Loss: 0.3905590280409782\n",
+      "Epoch 94/100, Loss: 0.38868447363136277\n",
+      "Epoch 95/100, Loss: 0.3884955468557535\n",
+      "Epoch 96/100, Loss: 0.39168269201632466\n",
+      "Epoch 97/100, Loss: 0.38971356316920247\n",
+      "Epoch 98/100, Loss: 0.39101550377184346\n",
+      "Epoch 99/100, Loss: 0.38828471812509724\n",
+      "Epoch 100/100, Loss: 0.38775405537697577\n"
      ]
     }
    ],
    "source": [
-    "# Treniranje modela \n",
     "epochs = 100\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
@@ -557,19 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 78.64%\n"
+      "Test Accuracy: 80.22%\n"
      ]
     }
    ],
    "source": [
-    "# Evaulacija modela\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    correct = 0\n",
@@ -586,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -595,12 +590,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Class 0       0.84      0.88      0.86      1036\n",
-      "     Class 1       0.61      0.54      0.57       373\n",
+      "     Class 0       0.85      0.89      0.87      1577\n",
+      "     Class 1       0.62      0.55      0.59       536\n",
       "\n",
-      "    accuracy                           0.79      1409\n",
-      "   macro avg       0.72      0.71      0.71      1409\n",
-      "weighted avg       0.78      0.79      0.78      1409\n",
+      "    accuracy                           0.80      2113\n",
+      "   macro avg       0.74      0.72      0.73      2113\n",
+      "weighted avg       0.80      0.80      0.80      2113\n",
       "\n"
      ]
     }
